[package]
name = "sqlx-testcontainers"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "migrate"] }
testcontainers = "0.23.1"
testcontainers-modules = { version = "0.11.4", features = ["postgres"] }
tokio = { version = "1.43.0", features = ["full"] }
sqlx-testcontainers-macros = { path = "./sqlx-testcontainers-macros" }

[workspace]
members = ["sqlx-testcontainers-macros"]
