[package]
name = "sqlx-testcontainers"
description = "use testcontainers to isolate sqlx tests"
readme = "README.md"
publish = true
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "migrate"] }
testcontainers = "0.23.1"
testcontainers-modules = { version = "0.11.4", features = ["postgres"] }
tokio = { version = "1.43.0", features = ["full"] }
sqlx-testcontainers-macros = { path = "./sqlx-testcontainers-macros", version = "0.1.0" }

[workspace]
members = ["sqlx-testcontainers-macros"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/AnthonySuper/sqlx-testcontainers"
authors = ["Anthony Super <anthony@noided.media>"]
