[package]
name = "sqlx-testcontainers-macros"
description = "macro support for SQLx-testcontainers. Not intended to be used directly."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.98", features = ["full"] }
quote = "1.0.38"
proc-macro2 = "1.0.93"
